[package]
name = "figma-file-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "figma-schema",
  "figma-html",
]

[dependencies]
figma-schema = { path = "./figma-schema" }
figma-html = { path = "./figma-html" }
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
