[package]
name = "figma-html"
version = "0.1.0"
edition = "2021"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
description = "Figma to CSS and HTML toolkit"
license = "MIT"
repository = "https://github.com/ccouzens/figma-rust"
keywords = ["Figma"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figma-schema = { path = "../figma-schema", version = "0.3.0" }
anyhow = "1.0.68"
html-escape = "0.2.13"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
lightningcss = "1.0.0-alpha.40"
serde = { version = "1.0", features = ["derive"] }

