[package]
name = "figma-schema"
version = "0.3.0"
edition = "2021"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
description = "Figma REST API schema"
license = "MIT"
repository = "https://github.com/ccouzens/figma-rust"
keywords = ["Figma"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
typeshare = "1.0.1"

